@@ -1,3 +1,7 @@
+Broker:
+- Fix possible crash when using pattern ACLs.
+
+
 1.4 - 20150218
 ==============
 
